<resources>
    <string name="app_name">RoomDemo</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>

    <string name="deletebutton">deleteButton</string>
    <string name="enter_name">Enter Name</string>
    <string name="asc">ASC</string>
    <string name="dsc">DSC</string>
    <string name="textview">TextView</string>
</resources>